Tested with Java 1.8 and up